--- a/assets/templates/sections/offers/mobile/welcome.html
+++ b/assets/templates/sections/offers/mobile/welcome.html
@@ -4,6 +4,10 @@
         <icon-arrow color="white" size="xl"></icon-arrow>
         <div class="help__text">Открыть свой профиль</div>
     </div>
+    <div class="help help5">
+        <icon-arrow color="white" size="xl"></icon-arrow>
+        <div class="help__text">Центр помощи</div>
+    </div>
     <div class="help help2">
         <icon-arrow color="white" size="xl"></icon-arrow>
         <div class="help__text">Отклики на резюме</div>
