--- a/assets/css/sections/master/_master.scss
+++ b/assets/css/sections/master/_master.scss
@@ -1,105 +1,122 @@
-.section__master {
-    @include abs();
-    @extend .c-white;
-    @extend .zIndex-10;
-    @extend .pointerEvents-none;
-
-    &:before {
-        @include accelerate();
-        @extend .content-empty;
-        @extend .pos-abs;
-        @extend .t50;
-        @extend .l50;
-        @extend .opacity-0;
-        width:202px;
-        height:202px;
-        transform-origin:50% 100%;
-        @extend .bg-white;
-        @extend .borderRadius-circle;
-        @extend .willChange-transform;
-        transform:translate3d(-50%, calc(50vh - 50%), 0);
-        transition:transform 0.8s $cubic645, background-color 0.35s $cubic645 0.45s, opacity 0.2s 0.6s;
-    }
-    &[data-open="true"]{
-        @extend .pointerEvents-all;
+html.d-no-phone {
+    .section__master {
+        @include abs();
+        @extend .c-white;
+        @extend .zIndex-10;
+        @extend .pointerEvents-none;
 
         &:before {
-            @extend .opacity-100;
-            background-color:rgba($blue,.95);
-            transition:transform 1s $cubic345;
-            transform:translate3d(-50%, 100vh, 0) scale(10);
-
-            html.d-tablet & {
-                transform:translate3d(-50%, 100vh, 0) scale(8.33);
-            }
+            @include accelerate();
+            @extend .content-empty;
+            @extend .pos-abs;
+            @extend .t50;
+            @extend .l50;
+            @extend .opacity-0;
+            width:202px;
+            height:202px;
+            transform-origin:50% 100%;
+            @extend .bg-white;
+            @extend .borderRadius-circle;
+            @extend .willChange-transform;
+            transform:translate3d(-50%, calc(50vh - 50%), 0);
+            transition:transform 0.8s $cubic645, background-color 0.35s $cubic645 0.45s, opacity 0.2s 0.6s;
         }
-        &[data-menu="true"]{
+        &:after {
+            @include accelerate(true);
+            @extend .content-empty;
+            @include abs();
+            @extend .opacity-0;
+            @extend .pointerEvents-none;
+            @extend .willChange-opacity;
+            background:url(/assets/images/messenger-client/bg1@2x.png);
+            transition:opacity 0.3s;
+        }
+        &[data-open="true"]{
+            @extend .pointerEvents-all;
+
             &:before {
+                @extend .opacity-100;
+                background-color:rgba($blue,.97);
+                transition:transform 1s $cubic345;
                 transform:translate3d(-50%, 100vh, 0) scale(10);
 
                 html.d-tablet & {
                     transform:translate3d(-50%, 100vh, 0) scale(8.33);
                 }
             }
-            .master__close {
-                transition-delay:0.85s;
+            &:after {
+                opacity:0.67;
+                transition:opacity 0.3s $cubic215 0.5s;
             }
-            .master__title__main__inner {
-                transition-delay:0.5s;
-            }
-            .master__block__item {
-                @for $i from 1 through 7 {
-                    &:nth-child(#{$i}){
-                        transition-delay:#{(0.56 + $i / 25)}s;
+            &[data-menu="true"]{
+                &:before {
+                    transform:translate3d(-50%, 100vh, 0) scale(10);
+
+                    html.d-tablet & {
+                        transform:translate3d(-50%, 100vh, 0) scale(8.33);
                     }
                 }
+                .master__close {
+                    transition-delay:0.85s;
+                }
+                .master__title__main__inner {
+                    transition-delay:0.5s;
+                }
+                .master__block__item {
+                    @for $i from 1 through 7 {
+                        &:nth-child(#{$i}){
+                            transition-delay:#{(0.56 + $i / 25)}s;
+                        }
+                    }
+                }
+                .master__close,
+                .master__title__main__inner,
+                .master__block__item {
+                    @extend .opacity-100;
+                    @extend .transform-default;
+                }
+                .master__close,
+                .master__title__main,
+                .master__block {
+                    @extend .pointerEvents-all;
+                }
             }
-            .master__close,
-            .master__title__main__inner,
-            .master__block__item {
-                @extend .opacity-100;
-                @extend .transform-default;
-            }
-            .master__title__main,
-            .master__block {
-                @extend .pointerEvents-all;
+            &[data-options="true"]{
+                .master__title__options {
+                    transition-delay:0.5s;
+                }
+                .master__options__content {
+                    transition-delay:0.7s;
+                }
+                .master__title__options,
+                .master__options__content {
+                    @extend .opacity-100;
+                    @extend .transform-default;
+                }
+                .master__options {
+                    @extend .pointerEvents-all;
+                }
             }
         }
-        &[data-options="true"]{
-            .master__title__options {
-                transition-delay:0.5s;
-            }
-            .master__options__content {
-                transition-delay:0.7s;
-            }
-            .master__title__options,
-            .master__options__content {
-                @extend .opacity-100;
-                @extend .transform-default;
-            }
-            .master__options {
-                @extend .pointerEvents-all;
-            }
+    }
+    .master__title__options,
+    .master__options__content,
+    .master__block__item {
+        transition:transform 0.55s $cubic215, opacity 0.37s $cubic215;
+
+        html.d-mobile & {
+            transition:transform 0.45s $cubic215, opacity 0.3s $cubic215;
         }
     }
-}
-.master__title__options,
-.master__options__content,
-.master__block__item {
-    transition:transform 0.55s $cubic215, opacity 0.37s $cubic215;
+    .master__close,
+    .master__title__main__inner {
+        transition:transform 0.6s $cubic215, opacity 0.42s $cubic215;
 
-    html.d-mobile & {
-        transition:transform 0.45s $cubic215, opacity 0.3s $cubic215;
+        html.d-mobile & {
+            transition:transform 0.5s $cubic215, opacity 0.37s $cubic215;
+        }
     }
-}
-.master__close,
-.master__title__main__inner {
-    transition:transform 0.6s $cubic215, opacity 0.42s $cubic215;
-
-    html.d-mobile & {
-        transition:transform 0.5s $cubic215, opacity 0.37s $cubic215;
+    .master__block__link:before {
+        transition:transform 0.6s $cubic345 0.08s;
     }
-}
-.master__block__link:before {
-    transition:transform 0.6s $cubic345 0.08s;
 }
