--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -45,12 +45,12 @@
 @import 'modules/alert';
 @import 'modules/oScreen';
 @import 'modules/screens';
-@import 'modules/tutorial';
-@import 'modules/shareButton';
-@import 'modules/shareButtonInline';
-@import 'modules/sharePanel';
-@import 'modules/uploadPhoto';
-@import 'modules/userPhoto';
+// @import 'modules/tutorial';
+// @import 'modules/shareButton';
+// @import 'modules/shareButtonInline';
+// @import 'modules/sharePanel';
+// @import 'modules/uploadPhoto';
+// @import 'modules/userPhoto';
 
 // Sections
 @import 'sections/sections';
@@ -65,45 +65,50 @@
 
 // master
 @import 'sections/master/master';
-@import 'sections/master/ui';
 @import 'sections/master/masterContent';
+@import 'sections/master/masterOptions';
 @import 'sections/master/masterLauncher';
+@import 'sections/master/ui';
+@import 'sections/master/mobile/master';
+@import 'sections/master/mobile/masterContent';
+@import 'sections/master/mobile/masterLauncher';
+@import 'sections/master/mobile/ui';
 
 // messenger
 @import 'sections/messenger/messengerLauncher';
 
 // jptest
-@import 'sections/jptest/jptest';
-@import 'sections/jptest/jptestEnter';
-@import 'sections/jptest/result/main';
-@import 'sections/jptest/result/columns';
-@import 'sections/jptest/result/skills';
-@import 'sections/jptest/result/humps';
-@import 'sections/jptest/result/graph';
-@import 'sections/jptest/result/specialties';
-@import 'sections/jptest/result/path';
-@import 'sections/jptest/result/finish';
-@import 'sections/jptest/result/ui';
+// @import 'sections/jptest/jptest';
+// @import 'sections/jptest/jptestEnter';
+// @import 'sections/jptest/result/main';
+// @import 'sections/jptest/result/columns';
+// @import 'sections/jptest/result/skills';
+// @import 'sections/jptest/result/humps';
+// @import 'sections/jptest/result/graph';
+// @import 'sections/jptest/result/specialties';
+// @import 'sections/jptest/result/path';
+// @import 'sections/jptest/result/finish';
+// @import 'sections/jptest/result/ui';
 
 // plan
-@import 'sections/plan/plan';
+// @import 'sections/plan/plan';
 
 // inbox
-@import 'sections/inbox/inbox';
+// @import 'sections/inbox/inbox';
 
 // payment
-@import 'sections/payment/payment';
+// @import 'sections/payment/payment';
 
 // offers
-@import 'sections/offers/premium/premium';
-@import 'sections/offers/premium/slides';
-@import 'sections/offers/premium/ui';
+// @import 'sections/offers/premium/premium';
+// @import 'sections/offers/premium/slides';
+// @import 'sections/offers/premium/ui';
 
 // overview
-@import 'sections/overview/main';
-@import 'sections/overview/premium/header';
-@import 'sections/overview/premium/slides';
-@import 'sections/overview/premium/ui';
+// @import 'sections/overview/main';
+// @import 'sections/overview/premium/header';
+// @import 'sections/overview/premium/slides';
+// @import 'sections/overview/premium/ui';
 // @import 'sections/overview/jptest/slides';
 // @import 'sections/overview/overviewFunctions';
 
@@ -111,16 +116,16 @@
 @import 'sections/list/resumeList';
 @import 'sections/list/resumeItem';
 @import 'sections/list/resumeStat';
-@import 'sections/list/resumePreview';
-@import 'sections/list/resumeSelect';
-@import 'sections/list/resumeLikes';
-@import 'sections/list/resumeSection';
+// @import 'sections/list/resumePreview';
+// @import 'sections/list/resumeSelect';
+// @import 'sections/list/resumeLikes';
+// @import 'sections/list/resumeSection';
 @import 'sections/list/mobile/resumeList';
 @import 'sections/list/mobile/resumeListItem';
 @import 'sections/list/mobile/resumeStat';
 
 // Resume create basic
-@import 'appResume/basic/style';
+// @import 'appResume/basic/style';
 
 // states
 @import 'states/states';
