--- a/views/private.html
+++ b/views/private.html
@@ -48,6 +48,11 @@
     <script src="/assets/js/templates.ui.js"></script>
     <script src="/assets/js/templates.sections.js"></script>
 
+    <script src="/assets/templates/sections/master/master.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/list/mobile/resumeList.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/offers/mobile/welcome.html" type="riot/tag"></script>
+
+
     <script src="/assets/js/app.js"></script>
     <!-- <script src="/assets/js/commons.js"></script>
     <script src="/assets/js/plugins.js"></script> -->
