--- a/public/css/jobs.scss
+++ b/public/css/jobs.scss
@@ -44,6 +44,7 @@
 @import 'sections/jobs/jobs';
 @import 'sections/jobs/footer';
 @import 'sections/jobs/sidebar';
+@import 'sections/jobs/informers';
 @import 'sections/jobs/search/nav/nav';
 @import 'sections/jobs/search/nav/header';
 @import 'sections/jobs/search/nav/menu';
