--- a/assets/css/sections/overview/_main.scss
+++ b/assets/css/sections/overview/_main.scss
@@ -256,6 +256,18 @@
                 @extend .overflow-hidden;
             }
         }
+        &__nav {
+            @extend .pos-tl;
+            @extend .w100p;
+            @extend .pointerEvents-none;
+            @extend .zIndex-2;
+            height:136px;
+            background-image:url(/public/images/promo/premium/mobile_resume_nav.png);
+
+            html.d-tablet.r-landscape & {
+                height:104px;
+            }
+        }
     }
     &__ipad {
         @include accelerate();
