--- a/assets/css/sections/overview/premium/_ui.scss
+++ b/assets/css/sections/overview/premium/_ui.scss
@@ -303,6 +303,11 @@
         box-shadow:inset 0 0 0 2px #007ec1, 0 2px 4px 0 rgba(#000,.1);
         background-color:rgba(154,220,255,.6);
         animation:ovpremium-pointer-pulse 1.5s infinite ease-in-out;
+
+        html.d-tablet.r-landscape & {
+            top:130px;
+            height:84px;
+        }
     }
     &__salary__pointer {
         @extend .pos-abs;
@@ -315,6 +320,13 @@
         box-shadow:inset 0 0 0 2px #007ec1, 0 2px 4px 0 rgba(#000,.1), 0 12px 30px -10px rgba(154,220,255,.48), 0 4px 30px 0px rgba(154,220,255,.2), 0 7px 16px -5px rgba(154,220,255,.3);
         background-color:rgba(154,220,255,.6);
         animation:ovpremium-pointer-pulse 1.5s infinite ease-in-out;
+
+        html.d-tablet.r-landscape & {
+            top:60px;
+            right:11px;
+            @extend .w42;
+            @extend .h42;
+        }
     }
     &__price {
         font-size:100px;
