--- a/public/css/sections/jobs/_ui.scss
+++ b/public/css/sections/jobs/_ui.scss
@@ -54,8 +54,10 @@
         border-color:$smokeDarken;
     }
     .c-blackLight {
+        color:$steel;
+
         html.d-phone & {
-            color:$steelDark;
+            color:#1d2129;
         }
     }
     .c-gray {
@@ -102,6 +104,9 @@
             @extend .c-white;
             box-shadow:inset 0 0 0 1px rgba($white,.3);
 
+            html.d-phone & {
+                @extend .c-white;
+            }
             &:hover {
                 @extend .bg-white;
                 box-shadow:inset 0 0 0 1px rgba($white,.5);
@@ -112,6 +117,9 @@
             @extend .c-white;
             box-shadow:none;
 
+            html.d-phone & {
+                @extend .c-white;
+            }
             &:hover {
                 @extend .bg-blue;
             }
