--- a/views/premiumView.html
+++ b/views/premiumView.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru" class="{% if device == 'phone' %}d-phone d-mobile m-touch{% else %}d-no-phone{% endif %}{% if device == 'tablet' %} d-tablet d-mobile m-touch{% else %} d-no-tablet{% endif %}{% if device == 'desktop' %} d-no-mobile m-no-touch{% endif %}">
 <head>
     <title>{% if post %}{{ post }} // ResumeKraft{% else %}Создать премиальное резюме{% endif %}</title>
     <meta charset="utf-8" />
