--- a/assets/templates/root-mobile.html
+++ b/assets/templates/root-mobile.html
@@ -81,7 +81,7 @@
     this.init = function(){
         app.initQuery = Url.parseQuery();
 
-        if (initQuery.homescreen){
+        if (app.initQuery.homescreen){
             app.isHomeScreen = true;
         }
         $Sections = {
