--- a/assets/css/appResume/basic/templates/template2/_style.scss
+++ b/assets/css/appResume/basic/templates/template2/_style.scss
@@ -173,7 +173,7 @@
         letter-spacing: -0.025em;
         text-transform:uppercase;
         text-align:right;
-        padding:0 60px 0 300px;
+        padding:0 60px 30px 300px;
     }
     .t-container {
         position:relative;
