--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -7,6 +7,9 @@ $graphik: "Graphik", sans-serif;
 $myriad: "Myriad", sans-serif;
 $arial: "Arial", sans-serif;
 $museo: "Museo", sans-serif;
+$als: "ALS", sans-serif;
+$fira: "Fira Sans", sans-serif;
+$govern: "Govern", sans-serif;
 $sfdisplay: "SF Display", sans-serif;
 $sftext: "SF Text", sans-serif;
 $systemFont: -apple-system,BlinkMacSystemFont,Roboto,Open Sans,Helvetica Neue,sans-serif;
