--- a/assets/css/base/_fonts.scss
+++ b/assets/css/base/_fonts.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,300,500,700&subset=cyrillic-ext,latin');
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans:400,500,700&subset=cyrillic');
 @import 'fonts/Futura/style';
 @import 'fonts/Proxima/style';
 @import 'fonts/Gotham/style';
@@ -13,6 +14,9 @@
 }
 .fontFamily-futura {
     font-family:$futura;
+}
+.fontFamily-fira {
+    font-family:$fira;
 }
 .fontFamily-proxima {
     font-family:$proxima;
