--- a/public/css/partials/_navFixed.scss
+++ b/public/css/partials/_navFixed.scss
@@ -11,7 +11,7 @@ $navHeightSmall: 60px;
         @extend .boxShadow-close;
         @extend .willChange-transform;
         border-bottom-color:transparent;
-        transition:transform .5s;
+        transition:all .5s;
         // box-shadow:0 0 12px rgba(28,28,28,.25);
         // box-shadow:5px 8.66px 30px 0 rgba(31,35,37,.078);
 
@@ -107,5 +107,9 @@ $navHeightSmall: 60px;
     }
     &[data-hidden="true"]{
         transform:translate3d(0, -100%, 0);
+
+        &[data-fixed="true"]{
+            box-shadow:0 1px 2px rgba(31,45,61,.15), 0 -10px 50px 10px rgba(#000,.1);
+        }
     }
 }
