--- a/public/css/sections/home/_header.scss
+++ b/public/css/sections/home/_header.scss
@@ -5,6 +5,13 @@
     @extend .c-white;
     @extend .overflow-hidden;
 
+    html.d-mobile & {
+        @extend .h100v;
+    }
+    &__container {
+        @extend .pos-centered;
+        @extend .zIndex-2;
+    }
     &__video {
         @extend .pos-tl;
         @extend .minWH-100p;
@@ -28,31 +35,35 @@
     &__text {
         @include accelerate();
         @extend .pos-rel;
-        padding-top:29.6vh;
+        @extend .centered;
+        @extend .pt75;
         @extend .zIndex-2;
-
-        html.d-tablet & {
-            padding-top:27.6vh;
-        }
     }
     &__title {
-        @extend .fontSize-72;
-        @extend .fontWeight-8;
-        @extend .mb-l;
+        @extend .fontFamily-govern;
+        font-size:66px;
+        line-height:74px;
+        @extend .fontWeight-bold;
+        @extend .mb30;
         @extend .textShadow-light;
-        letter-spacing:-0.04em;
+        letter-spacing:-0.033em;
 
-        html.d-tablet.r-landscape & {
-            @extend .letterSpacing--xxxl;
-            margin-left:-10px;
-            margin-right:-10px;
+        html.d-mobile & {
+            font-size:62px;
+            line-height:74px;
         }
     }
     &__subtitle {
         font-size:30px;
         line-height:1.3;
-        letter-spacing:-1.4px;
+        @extend .letterSpacing--l;
         @extend .mb-l;
+
+        html.d-mobile & {
+            font-size:26.5px;
+            line-height:1.3;
+            letter-spacing:-0.035em;
+        }
     }
     .btn-white-hover {
         html.m-no-touch &:hover {
@@ -98,6 +109,81 @@
             .buttonPremium__halfright {
                 transform:translate3d(15px, 0, 0);
             }
+        }
+    }
+    &__arrow {
+        @include accelerate(true);
+        @extend .pos-abs;
+        @extend .l0;
+        bottom:calc(5vh + 33px);
+        @extend .w100p;
+        @extend .h20;
+        @extend .zIndex-2;
+        @extend .pointerEvents-none;
+        @extend .willChange-tp;
+        transform-origin:top;
+        transition:all 0.7s $cubic60;
+
+        &[data-hidden="true"]{
+            @extend .opacity-0;
+            transform:translate3d(0, 40px, 0) scale3d(0.8, 0.8, 1);
+        }
+        &:before {
+            @extend .content-empty;
+            @extend .pos-abs;
+            @extend .l50;
+            @extend .b0;
+            margin-left: -12px;
+            @extend .w20;
+            @extend .h20;
+            border:4px solid $white;
+            border-left:none;
+            border-top:none;
+            transform:rotate(45deg) translateZ(0);
+        }
+        &__small {
+            @include accelerate();
+            @extend .pos-abs;
+            @extend .l50;
+            @extend .b100;
+            margin-left:-9px;
+            transform:translate3d(0, 66%, 0) scale3d(1.4, 1.4, 1);
+            @extend .willChange-tp;
+            animation:scroll__arrow 1.4s infinite;
+
+            &:before {
+                @extend .display-block;
+                @extend .content-empty;
+                width:14px;
+                height:14px;
+                border:4px solid $white;
+                border-left:none;
+                border-top:none;
+                border-bottom-width: 3px;
+                border-right-width: 3px;
+                transform:rotate(45deg) translateZ(0);
+            }
+        }
+    }
+}
+
+@keyframes scroll__arrow {
+    from {
+        transform:translate3d(0, -33%, 0) scale3d(1, 1, 1);
+    }
+    to {
+        transform:translate3d(0, 66%, 0) scale3d(1.4, 1.4, 1);
+        opacity:0;
+    }
+}
+
+@media (min-height: 769px){
+    .home__header {
+        &__container {
+            padding-bottom:0px;
+        }
+        &__text {
+            padding-top:30px;
         }
     }
 }
